Add budget export automation and consolidate n8n workflows
- Moved budget export scripts from python-budget-tracker to alpine-utility/scripts/
- Updated scripts to use container volume mounts (/mnt/budget-dashboard, /mnt/backups)
- Added volume mounts to alpine-utility in compose.yml for budget data access
- Created n8n workflows for monthly budget exports (main & GF dashboards)
- Consolidated all n8n workflows into single n8n-workflows/ directory
- Moved podcast workflows from podcast-automation/n8n-workflows/ to n8n-workflows/
- Created unified n8n-workflows/README.md covering all workflows (podcast + budget)
- Updated podcast-automation/README.md to reference new workflow location
- Created alpine-utility/scripts/README.md documenting export scripts

Budget export workflows trigger monthly on last day at 11:55 PM & 11:57 PM

--- a/compose.yml
+++ b/compose.yml
@@ -526,6 +526,10 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /Volumes/docker/container_configs/alpine-utility:/config
       - /Volumes/docker/container_configs/audiobookshelf/podcasts:/mnt/audiobookshelf
+      # Budget export script volumes
+      - /Volumes/docker/container_configs/budget-dashboard/app-data:/mnt/budget-dashboard:ro
+      - /Volumes/docker/container_configs/budget-dashboard-gf/app-data:/mnt/budget-dashboard-gf:ro
+      - /Volumes/backups/budget-dashboard:/mnt/backups/budget-dashboard
     ports:
       - "2223:22"
     restart: unless-stopped
